compiler/testData/diagnostics/tests/sealed/RedundantAbstract.kt
// RUN_PIPELINE_TILL: BACKEND
<!REDUNDANT_MODIFIER!>abstract<!> sealed class Base {

}

/* GENERATED_FIR_TAGS: classDeclaration, sealed */
